//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/empty.proto";

import "dxos/keys.proto";

package dxos.iframe;

message StartRequest {
  string origin = 1;
}

/// Worker-to-iframe RPCs.
service IframeService {
  rpc Heartbeat(google.protobuf.Empty) returns (google.protobuf.Empty);
}

/// Iframe-to-worker RPCs.
service WorkerService {
  rpc Start(StartRequest) returns (google.protobuf.Empty);
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
}

enum ShellDisplay {
  NONE = 0;
  FULLSCREEN = 1;
}

message DisplayRequest {
  ShellDisplay display = 1;
}

message SpaceRequest {
  dxos.keys.PublicKey space_key = 1;
}

/// App RPCs for the shell.
service AppService {
  rpc SetDisplay(DisplayRequest) returns (google.protobuf.Empty);
  // rpc SetIdentity(IdentityRequest) returns (google.protobuf.Empty);
  rpc SetSpace(SpaceRequest) returns (google.protobuf.Empty);
}

enum ShellLayout {
  DEFAULT = 0;
  AUTH = 1;
  CURRENT_SPACE = 2;
  SPACE_LIST = 3;
}

message LayoutRequest {
  ShellLayout layout = 1;
}

/// Shell UI RPCs.
service ShellService {
  rpc SetLayout(LayoutRequest) returns (google.protobuf.Empty);
}
